--- a/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/Views/Movies/Index.cshtml
@@ -32,6 +32,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Price)
             </th>
+            <th>@Html.DisplayNameFor(model=>model.Rating)</th>
             <th></th>
         </tr>
 
@@ -50,6 +51,7 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Price)
                 </td>
+                <td>@Html.DisplayFor(modelItem=> item.Rating)</td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                     @Html.ActionLink("Details", "Details", new { id = item.Id }) |
